--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,10 +21,10 @@
   --header-height: 3rem;
 
   /* Colors */
-  --hue-color: 244;
+  --hue-color: 240;
 
   /* HEX color mode */
-  --first-color: hsl(var(--hue-color), 100%, 17%);
+  --first-color: hsl(var(--hue-color), 100%, 28%);
   --first-color-second: hsl(var(--hue-color), 69%, 61%);
   --first-color-alt: hsl(var(--hue-color), 100%, 35%);
   --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
@@ -442,13 +442,166 @@ img {
   transition: 0.4s;
 }
 
+.skills__list {
+  row-gap: 1.5rem;
+  padding-left: 2.7rem;
+}
+
 .skills__titles {
   display: flex;
   justify-content: space-between;
   margin-bottom: var(--mb-0-5);
 }
 
+.skills__name {
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-medium);
+}
+
+.skills__bar,
+.skills__percentage {
+  height: 5px;
+  border-radius: 0.25rem;
+}
+
+.skills__bar {
+  background-color: var(--first-color-lighter);
+}
+
+.skills__percentage {
+  display: block;
+  background-color: var(--first-color);
+}
+
+.skills__html {
+  width: 90%;
+}
+
+.skills__css {
+  width: 70%;
+}
+
+.skills__js {
+  width: 60%;
+}
+
+.skills__react {
+  width: 35%;
+}
+
+.skills__php {
+  width: 45%;
+}
+
+.skills__node {
+  width: 40%;
+}
+
+.skills__firebase {
+  width: 25%;
+}
+
+.skills__python {
+  width: 20%;
+}
+
+.skills__figma {
+  width: 35%;
+}
+
+.skills__illustrator {
+  width: 30%;
+}
+
+.skills__balsamiq {
+  width: 55%;
+}
+
+.skills__close .skills__list {
+  height: 0;
+  overflow: hidden;
+}
+
+.skills__open .skills__list {
+  height: max-content;
+  margin-bottom: var(--mb-2-5);
+}
+
+.skills__open .skills__arrow {
+  transform: rotate(-180deg);
+}
+
 /* QUALIFICATION */
+.qualification__tabs {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: var(--mb-2);
+}
+
+.qualification__button {
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-medium);
+  cursor: pointer;
+}
+
+.qualification__button:hover {
+  color: var(--first-color);
+}
+
+.qualification__icon {
+  font-size: 1.8rem;
+  margin-right: var(--mb-0-25);
+}
+
+.qualification__data {
+  display: grid;
+  grid-template-columns: 1fr max-content 1fr;
+  column-gap: 1.5rem;
+}
+
+.qualification__title {
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-medium);
+}
+
+.qualification__subtitle {
+  display: inline-block;
+  font-size: var(--small-font-size);
+  margin-bottom: var(--mb-1);
+}
+
+.qualification__calendar {
+  font-size: var(--smaller-font-size);
+  color: var(--text-color-light);
+}
+
+.qualification__rounder {
+  display: inline-block;
+  width: 13px;
+  height: 13px;
+  background-color: var(--first-color);
+  border-radius: 50%;
+}
+
+.qualification__line {
+  display: block;
+  width: 1px;
+  height: 100%;
+  background-color: var(--first-color);
+  transform: translate(6px, -7px);
+}
+
+.qualification [data-content] {
+  display: none;
+}
+
+.qualification__active[data-content] {
+  display: block;
+}
+
+.qualification__button.qualification__active {
+  color: var(--first-color);
+}
 
 /* SERVICES */
 
@@ -475,4 +628,4 @@ img {
 
 /* For medium devices */
 
-/* For large devices */
+/* For large devices */ ;
